--- a/WFC/style.css
+++ b/WFC/style.css
@@ -68,7 +68,8 @@ body {
     color: #fff;
     
     font-size: 2rem;
-    
+    background-color: #7f5a83;
+    background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
     
 }
 
@@ -185,9 +186,9 @@ h4{
     text-align: center;
     text-transform: capitalize;
 }
-/* white space--------------------------------------------------------------------------------------------- */
+/* death toll--------------------------------------------------------------------------------------------- */
 .second_container{
-    background: linear-gradient(159deg, #332a2a, #1b0179);
+    background: linear-gradient(159deg, #000000, #1a0566);
     background-size: 400% 400%;
     min-height: 600px;
     -webkit-animation: blackspace 21s ease infinite;
@@ -289,9 +290,130 @@ ul li label{
     min-height: 5cm;
     font-size: 1.5rem;
 }
+/* death toll table------------------------------------------------------------------ */
+.death_toll{
+    display: flex;
+    justify-content: center;
+    padding: 2rem 3rem 5rem;
+    text-transform: capitalize;
+}
+.death_tr{
+    background-color: #eb081a;
+    
+}
+.death_td{
+    padding: 1rem 3rem;
+}
+.caption_td{
+    padding: 3rem 1.5rem 0.3rem;
+}
+.chart{
+    margin-top: 80px;
+    
+    
+}
+.death-img{
+    display: flex;
+    justify-content: center;
+    
+}
 
 
 
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  #myImg:hover {opacity: 0.7;}
+  
+  /* The Modal (background) */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  }
+  
+  /* Modal Content (image) */
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+  }
+  
+  /* Caption of Modal Image */
+  #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+  }
+  
+  /* Add Animation */
+  .modal-content, #caption {  
+    animation-name: zoom;
+    animation-duration: 0.6s;
+  }
+  
+  @keyframes zoom {
+    from {transform: scale(0.1)} 
+    to {transform: scale(1)}
+  }
+  
+  /* The Close Button */
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* 100% Image Width on Smaller Screens */
+  @media only screen and (max-width: 700px){
+    .modal-content {
+      width: 100%;
+    }
+  }
+a{
+    font-size: 2.5rem;
+    text-decoration-line: none;
+    line-height: inherit;
+}
+
+a:active {
+    color: #eb081a;
+}
+a:visited {
+    color: #eb081a;
+    opacity: 0.8;
+}
+a:hover {
+    color: lime; 
+}
 @media only screen and (max-width: 400px) {
     body{font-size: 2vw;}
     .myName{font-size: 2.3vw;}
